--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,6 +2,6 @@
 	<%= f.text_field :title %> <br>
 	<%= f.text_area :body, size: "60x12" %><br><br>
 
-	<%= f.submit "Create" %>
+	<%= f.submit %>
 
 <% end %>
