--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,23 @@
 </head>
 <body>
 <h3><%= link_to "P-Lab", root_path %></h3>
+
+<% if user_signed_in? %>
+	<%= link_to "New Post", new_post_path %>
+	<%= link_to "Account", edit_user_registration_path %>
+	<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+<% else %>
+	<%= link_to "Sign Up", new_user_registration_path %>
+	<%= link_to "Sign In", new_user_session_path %>
+<% end %>
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
+<% flash.each do |name, msg| %>
+	<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+<% end %>
+
 <%= yield %>
 
 </body>
