Added user restrictions to act upon the post they did not post

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,4 @@
 <% @posts.each do |post| %>
 	<h3><%= link_to post.title, post %></h3>
-	<small>Created <%= time_ago_in_words(post.created_at) %> ago</small>
+	<small>Posted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.email %></small>
 <% end %>
-
-<p><%= link_to "New Blog", new_post_path(@post) %></p>
