--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,9 @@
 <h3><%= @post.title %></h3>
 <p><%= @post.body %></p>
+<small>Posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.email %></small> <br>
+<% if @post.user == current_user %>
 
-<%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
+	<%= link_to "Edit", edit_post_path(@post) %>
+
+	<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
+<% end %>
