--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,23 @@
-// Place all the styles related to the posts controller here.
+/*// Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// You can use Sass (SCSS) here: http://sass-lang.com/*/
+
+.post {
+	margin: 10px 0;
+	padding: 10px 0;
+	border-bottom: 1px solid #eee;
+
+	.post-header {
+		margin-bottom: 10px; 
+		a {
+			text-decoration: none;
+		}
+		small {
+			color: #fff;
+			padding: 5px;
+			font-size: 10px;
+			background: #969696;
+			border-radius: 3px
+		}
+	}
+}
