--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,12 +18,78 @@
 @import "bootstrap";
 @import "normalize";
 
+html, body{
+	/*font-family: "Helvetica Neue Thin", sans-serif;*/
+	font-weight: 200;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 200;
+}
+
+input[type="submit"], button {
+	display: inline-block;
+	margin-bottom: 0;
+	text-align: center;
+	vertical-align: middle;
+	touch-action: manipulation;
+	cursor: pointer;
+	background: transparent;
+	border: 1px solid #03a72f;
+	white-space: nowrap;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	border-radius: 2px;
+}
+
+input[type="submit"]:hover, button:hover {
+	background: #03a72f;
+	color: #fff
+}
+
+input[type="text"], input[type="email"], input[type="password"] {
+	display: block;
+	margin-bottom: 15px;
+	width: 100%;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+}
+
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, textarea:focus {
+	outline: 0px;
+    -webkit-appearance: none;
+}
+
+textarea {
+	resize: none;
+	width: 100%;
+	padding: 6px 12px;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+
+}
+
+.form-control {
+	border-radius: 2px;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+}
+
 .masterhead {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	font-size: 24px;
 	text-align: left;
 	background: lightgrey;
+	text-align: center;
 }
 
 .main-navbar {
