--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,9 +45,11 @@
 
 <div class="masterhead">
 	<div class="container">
-		<h1>Hello, world!</h1>
-		<p>...</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>	
+		<h1>
+			<%= @welcome_text %> <br>
+			<small><%= @slogan_text %> <br></small> 
+		</h1>
+
 	</div>
 </div>
 
