--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,11 @@
 <%= form_for @post do |f| %>
-	<%= f.text_field :title %> <br>
-	<%= f.text_area :body, size: "60x12" %><br><br>
+	<div class="form-group">
+		<%= f.text_field :title, :placeholder => 'Post Title' %>
+	</div>
+
+	<div class="form-group">
+		<%= f.text_area :body, size: "60x12", :placeholder => 'Enter your Post body here...' %>
+	</div>
 
 	<%= f.submit %>
 
