--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<% @welcome_text = "Welcome to P*Lab" %>
+<% @slogan_text = "...where technology comes to life" %>
 
 <% @posts.each do |post| %>
 	<div class="post">
