--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Plab</title>
+  <title>P*Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -19,12 +19,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "P-Lab", root_path, class: "navbar-brand" %>
+      <%= link_to "P*Lab", root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+      	<li><%= link_to "Home", root_path %></li>
+      	<li><%= link_to "Members", users_path %></li>
 		<% if user_signed_in? %>
 			<li><%= link_to "New Post", new_post_path %></li>
 			<li class="dropdown">
@@ -45,11 +47,19 @@
 
 <div class="masterhead">
 	<div class="container">
-		<h1>
-			<%= @welcome_text %> <br>
-			<small><%= @slogan_text %> <br></small> 
-		</h1>
-
+		<div class="text-bg">
+			<% if @welcome_text %>
+			<h1>
+				<%= @welcome_text %> <br>
+				<small><%= @slogan_text %> <br></small> 
+			</h1>
+			<% else %>
+				<h2>
+					<%= @banner_text %> <br>
+					<small><%= @small_text %> <br></small> 
+				</h2>
+			<% end %>
+		</div>
 	</div>
 </div>
 
@@ -57,7 +67,7 @@
 	<div class="row">
 	  <div class="col-sm-8">
 	    <% flash.each do |name, msg| %>
-			<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+			<%= content_tag(:div, msg, class: "alert alert-info") %>
 		<% end %>
 
 		<%= yield %>
