--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,6 +4,7 @@
 
 .member-box {
 	border-bottom: 1px solid #e5e5e5;
-	margin: 10px 0;
-	padding: 10px 0;
+	border-radius: 2px;
+	padding: 10px;
+	margin-bottom: 10px;
 }
