--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,5 +1,15 @@
+<h1>Lab Members</h1>
 <% @users.each do |user|%>
-<div class="member-box">
-	<%= user.username %>
-</div>
+	<div class="member-box">
+	<div class="row">
+		<div class="col-xs-4">
+			<%= image_tag("avatar.png", :alt => "Profile Image", class: "img thumbnail") %>
+		</div>
+		<div class="col-xs-8">
+			<h1> <%= link_to user.full_name, user %> <small><%= user.username %></small> </h1>
+			<h4>Biography</h4>
+			<p> <%= user.biography %></p>	
+		</div>
+	</div>
+	</div>
 <% end %>
