--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,20 +25,44 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-      	<li><%= link_to "Home", root_path %></li>
-      	<li><%= link_to "Members", users_path %></li>
+      	<li>
+      	<% if user_signed_in? %>
+	      	<%= link_to new_post_path, :class => "link_btn" do %>
+	      		<button><i class='glyphicon glyphicon-pencil'></i> New Post</button>
+	      	<% end %>
+      	<% end %>
+      	</li>
+      	<li>
+      	<%= link_to root_path do %>
+      		<i class='glyphicon glyphicon-home'></i> Home
+      	<% end %>
+      	</li>
+      	<li>
+      	<%= link_to users_path do %>
+      		<i class='glyphicon glyphicon-th-list'></i> Members
+		<% end %>
+      	</li>
 		<% if user_signed_in? %>
-			<li><%= link_to "New Post", new_post_path %></li>
 			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username%><span class="caret"></span></a>
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class='glyphicon glyphicon-user'></i> <%= current_user.username.titleize %><span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><%= link_to "Account", edit_user_registration_path %></li>
-					<li><li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li></li>
+					<li>
+					<%= link_to edit_user_registration_path do %>
+						<i class='glyphicon glyphicon-cog'></i> Account
+					<% end %>
+					</li>
+					<li>
+					<%= link_to destroy_user_session_path, :method => :delete do %>
+						<i class='glyphicon glyphicon-log-out'></i> Sign Out
+					<% end %>
+					</li>
 				</ul>
 			</li>
 		<% else %>
-			<li><%= link_to "Sign Up", new_user_registration_path %></li>
-			<li><%= link_to "Sign In", new_user_session_path %></li>
+			<li>
+			<%= link_to new_user_session_path do %>
+	      		<i class='glyphicon glyphicon-log-in'></i> Sign In
+	      	<% end %>
 		<% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -67,7 +91,7 @@
 	<div class="row">
 	  <div class="col-sm-8">
 	    <% flash.each do |name, msg| %>
-			<%= content_tag(:div, msg, class: "alert alert-info") %>
+			<%= content_tag(:div, "<strong>#{msg}</strong>".html_safe, class: "alert alert-#{name}") %>
 		<% end %>
 
 		<%= yield %>
