Added user profile page

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,15 +8,15 @@
 	border-bottom: 1px solid #eee;
 
 	.post-header {
-		margin-bottom: 10px; 
+		margin-bottom: 10px;
 		a {
 			text-decoration: none;
 		}
 		small {
-			color: #fff;
+			color: #969696;
 			padding: 5px;
 			font-size: 10px;
-			background: #969696;
+			border: 1px solid #969696;
 			border-radius: 3px
 		}
 	}
