--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,3 +8,11 @@
 	padding: 10px;
 	margin-bottom: 10px;
 }
+
+.no-post {
+	text-align: center;
+	padding: 10px;
+	background-color: #c7eeff;
+	color: #2E7ABC;
+	border-radius: 2px;
+}
