--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,8 @@
-
 <div class="post">
 	<div class="post-header">
 		<h2><%= @post.title %></h2>
-		<small>Posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.username %></small>
-		
+		<small>Posted <%= time_ago_in_words(@post.created_at) %> ago by <%= link_to @post.user.username.titleize, @post.user %></small>
+
 		<% if @post.user == current_user %>
 			<div class="pull-right">
 
@@ -14,7 +13,7 @@
 				<%= link_to post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} do %>
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 				<% end %>
-			</div>	
+			</div>
 		<% end %>
 	</div>
 
