--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
 
 <div class="container">
 	<div class="row">
-	  <div class="col-sm-8">
+	  <div class="col-md-8">
 	    <% flash.each do |name, msg| %>
 			<%= content_tag(:div, "<strong>#{msg}</strong>".html_safe, class: "alert alert-#{name}") %>
 		<% end %>
@@ -97,8 +97,16 @@
 		<%= yield %>
 	  </div>
 
-	  <div class="col-sm-4">
-	  	<h2>Featured Topic </h2>
+	  <div class="col-md-4">
+	  	<h2><i class="glyphicon glyphicon-fire"></i> Featured Topics </h2>
+	  	<div class="f-topics">
+	  		<% (1..3).each do |topics|%>
+		  		<div class="topics">
+		  		<h3>Topic Title</h3>
+		  		<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo... <a href="#">read more</a> </p>
+		  		</div>
+		  	<% end %>
+	  	</div>
 	  </div>
 
 	</div>
