--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -95,10 +95,11 @@ textarea {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	font-size: 24px;
-	background: url('/assets/banner4.jpg') no-repeat center center fixed;
-	background-size: cover;
+	background: url('/assets/p_lab_team.png') no-repeat top center fixed;
+	// background-size: cover;
 	text-align: center;
 	margin-bottom: 10px;
+	width: 100%;
 
 	h1 {
 		color: #e9eefb;
@@ -169,4 +170,9 @@ textarea {
 	color: #767676;
 	text-align: center;
 	border-top: 1px solid #e5e5e5;
+}
+
+.parallax-window {
+    min-height: 400px;
+    background: transparent;
 }
